<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginScreenDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginLabel">Login, Here we go!</string>
    <string name="email_address_hint">E-mail Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="forgot_password_label">I forgot my password</string>
    <string name="title_activity_stream">StreamActivity</string>

</resources>
