<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_height="180dp"
        android:layout_width="match_parent"
        android:background="#80a4113b" >
        
        <TextView
            android:id="@+id/tvLoginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/loginLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvLoginLabel"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onLoginPressed"
            android:layout_below="@+id/etPassword"
            android:text="@string/login_button_label" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCancelPressed"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/etPassword"
            android:text="@string/cancel_button_label" />

        <TextView
            android:id="@+id/forgotPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:color="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/etEmail"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </RelativeLayout>

    

</RelativeLayout>